Corrigir erro de node-fetch e ocultar informação de custo durante processamento de mockups

--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,12 @@ a<!DOCTYPE html>
                 <div class="tab-content" id="gallery-tab">
                     <div class="client-gallery">
                         <div class="gallery-header">
-                            <h3>Galeria de Imagens</h3>
+                            <div class="gallery-title-section">
+                                <h3>Galeria de Imagens</h3>
+                                <button id="refresh-gallery-btn" class="refresh-btn" title="Atualizar Galeria">
+                                    <i class="fas fa-sync-alt"></i> Atualizar
+                                </button>
+                            </div>
                             <div class="gallery-filters">
                                 <button class="filter-btn active" data-filter="all">
                                     <i class="fas fa-th"></i> Todos
