Corrigir event listeners da seção Modificação de cores - agora abre prompt corretamente

--- a/public/index.html
+++ b/public/index.html
@@ -882,7 +882,7 @@ a<!DOCTYPE html>
                                     </div>
                                 </div>
                                 
-                                <div class="color-instructions-container" id="color-instructions-container" style="display: none;">
+                                <div class="color-instructions-container" id="color-instructions-container">
                                     <div class="color-instructions-header">
                                         <h5>💬 Descreva a modificação de cores</h5>
                                         <div class="example-hint">
