Refactor: Modularize script.js into separate modules for better maintainability and organization

--- a/public/index.html
+++ b/public/index.html
@@ -1216,6 +1216,11 @@ a<!DOCTYPE html>
     <input type="file" id="central-logo-input" class="logo-file-input" accept="image/*">
     <input type="file" id="detail-logo-input" class="logo-file-input" accept="image/*">
 
+    <!-- Módulos JavaScript -->
+    <script src="js/modules/utils.js"></script>
+    <script src="js/modules/progress.js"></script>
+    
+    <!-- Script principal -->
     <script src="js/script.js"></script>
 </body>
 </html>
