Fix: Add all module imports to index.html in correct order

--- a/public/index.html
+++ b/public/index.html
@@ -1217,8 +1217,21 @@ a<!DOCTYPE html>
     <input type="file" id="detail-logo-input" class="logo-file-input" accept="image/*">
 
     <!-- Módulos JavaScript -->
+    <!-- Módulos Base -->
     <script src="js/modules/utils.js"></script>
     <script src="js/modules/progress.js"></script>
+    
+    <!-- Módulos de Funcionalidade -->
+    <script src="js/modules/activeProcesses.js"></script>
+    <script src="js/modules/auth.js"></script>
+    <script src="js/modules/clients.js"></script>
+    <script src="js/modules/analysis.js"></script>
+    <script src="js/modules/transcriptions.js"></script>
+    <script src="js/modules/actionPlans.js"></script>
+    <script src="js/modules/mockups.js"></script>
+    <script src="js/modules/gallery.js"></script>
+    <script src="js/modules/imageEditor.js"></script>
+    <script src="js/modules/artisticStyle.js"></script>
     
     <!-- Script principal -->
     <script src="js/script.js"></script>
