retorno ao estado estavel

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@ a<!DOCTYPE html>
     <title>Janice - AI Marketing Assistant</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 </head>
 <body>
     <div class="app-wrapper">
@@ -318,7 +319,7 @@ a<!DOCTYPE html>
             
             <div class="export-actions">
                 <button id="export-action-plan-pdf" class="action-button">
-                    <i class="fas fa-file-pdf"></i> Exportar PDF
+                    <i class="fas fa-download"></i> Baixar Relatório
                 </button>
                 <button id="copy-action-plan" class="action-button">
                     <i class="fas fa-copy"></i> Copiar Plano
