Modify Market Analysis PDF functionality to use client-side generation

--- a/public/index.html
+++ b/public/index.html
@@ -412,22 +412,9 @@ a<!DOCTYPE html>
                 </div>
             </div>
 
-            <div class="pdf-container">
-                <div class="content-section">
-                    <h3>Relatório Completo</h3>
-                    <p class="pdf-info">O relatório completo foi gerado com sucesso. Você pode visualizá-lo e baixá-lo abaixo.</p>
-                    <div id="pdf-viewer">
-                        <div class="pdf-placeholder">
-                            <i class="fas fa-file-pdf"></i>
-                            <p>Seu relatório estratégico está pronto</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
             <div class="export-actions">
                 <button id="export-pdf" class="action-button">
-                    <i class="fas fa-file-pdf"></i> Exportar PDF
+                    <i class="fas fa-download"></i> Baixar Relatório
                 </button>
                 <button id="copy-report" class="action-button">
                     <i class="fas fa-copy"></i> Copiar Relatório
