--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 a<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
+<meta charset="UTF-8">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Janice - AI Marketing Assistant</title>
     <link rel="stylesheet" href="css/styles.css">
