Refactor: Extract action plan functionality to separate module

--- a/public/index.html
+++ b/public/index.html
@@ -941,6 +941,7 @@ a<!DOCTYPE html>
         </div>
     </div>
 
+    <script src="js/actionPlanManager.js"></script>
     <script src="js/script.js"></script>
     <script src="js/script_chat.js"></script>
 </body>
